--- a/Clustering_exp_python.ipynb
+++ b/Clustering_exp_python.ipynb
@@ -92,8 +92,8 @@
         "Lfocus = 3\n",
         "G_L = np.eye(frmatii[0].shape[1])  # Identity matrix of appropriate size\n",
         "\n",
-        "# Multiply matrices frmatii[2], frmatii[1], frmatii[0] in sequence\n",
-        "for ii in range(Lfocus-1, -1, -1):  # Iterating from frmatii[2] to frmatii[0]\n",
+        "# Multiply weight matrices frmatii[Lfocus], frmatii[Lfocus-1],..., frmatii[0] in sequence\n",
+        "for ii in range(Lfocus-1, -1, -1):  # Iterating from frmatii[Lfocus] to frmatii[0] get model for recursive clustering\n",
         "    G_L = np.dot(frmatii[ii], G_L)\n",
         "\n",
         "\n",
